--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
     "tape": "^4.9.0",
     "webpack": "^4.9.1"
   }
